<resources>
    <string name="app_name">Calculadora</string>
    <string name="historico">Histórico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="igual">=</string>
    <string name="zero">0</string>
    <string name="ponto">.</string>
    <string name="mais">+</string>
    <string name="nove">9</string>
    <string name="oito">8</string>
    <string name="sete">7</string>
    <string name="menos">-</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="quatro">4</string>
    <string name="vezes">×</string>
    <string name="tres">3</string>
    <string name="dois">2</string>
    <string name="um">1</string>
    <string name="dividir">÷</string>
    <string name="fecha_Parentese">)</string>
    <string name="abre_parentese">(</string>
</resources>